background, header and footer styles changed, fixed card margin problems when size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,19 @@ p {
 #despliegue {
     color: white;
 }
+
+.brillo {
+
+    filter: brightness(2.3) sepia(20%) blur(2px);
+
+}
+
+#gradientetop {
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+#gradientebot {
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
+}
